# salasblog2

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  analyze_blog_files.py  analyze_blog_markdown.py  b.py  bg.py  content  debug_content_dirs.py  fly.toml  main.py  preview.html  pyproject.toml  remove_duplicate_raindrops.py  startup.sh  test_checksum_sync.py  test_rsync_behavior.py  test_server.py  test_utils.py  utils.py
.claude/: settings.local.json
.claude/commands/: commit.md  deploy.md  xyzzy.md
.github/workflows/: claude-manual.yml  claude.yml
content/: .rd_cache.json
content/blog/: 2004-01-04-Absolutely-stunning-animation-of-recent.md  2004-01-08-well-is-it-dr-dean.md  (+1230 more)
content_data_protect_2/: .rd_cache.json
content_protect_2/: .rd_cache.json
prototypes/: README.md  blog_prototype_1_compact.html  blog_prototype_2_grid.html  blog_prototype_3_timeline.html  blog_prototype_4_minimal.html  blog_prototype_5_magazine.html
scripts/: debug_content_dirs.py  setup-git.sh
templates/: 404.html  admin.html  admin_login.html  base.html  blog_list.html  blog_post.html  edit_post.html  new_post.html  page.html  preview_new_post.html  preview_post.html  raindrops_list.html
tests/: test_file_serving_security.py  test_live_server_admin_buttons.py  test_mime_types.py  test_pages_feature.py  test_pages_frontmatter_debug.py  test_pages_live_server.py  test_placeholder_title.py  test_raindrop.py  test_raindrops_404_scenarios.py  test_scheduler.py  test_server_simple.py  test_static_file_serving.py  test_utils.py  test_verify_placeholder_fix.py
(+6702 files in other folders)
